--- a/package.json
+++ b/package.json
@@ -3,12 +3,42 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/commands": "^6.2.4",
+    "@codemirror/lang-html": "^6.4.3",
+    "@codemirror/lang-javascript": "^6.1.8",
+    "@codemirror/lang-python": "^6.1.2",
+    "@codemirror/language": "^6.7.0",
+    "@codemirror/state": "^6.2.1",
+    "@codemirror/theme-one-dark": "^6.1.2",
+    "@codemirror/view": "^6.12.0",
+    "@stitches/react": "^1.2.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/codemirror-theme-vscode": "^4.20.2",
+    "@uiw/react-codemirror": "^4.20.2",
+    "aws-sdk": "^2.1386.0",
+    "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
+    "bootstrap": "^3.4.1",
+    "cors": "^2.8.5",
+    "dompurify": "^3.0.3",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "lodash": "^4.17.21",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
+    "prettier": "^2.8.8",
     "react": "^18.2.0",
+    "react-ace": "^10.1.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-iframe": "^1.8.5",
     "react-scripts": "5.0.1",
+    "simplebar-react": "^3.2.4",
+    "sse": "^0.0.8",
+    "sse.js": "^0.6.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
