--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "@codemirror/state": "^6.2.1",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/view": "^6.12.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.132",
+    "@mui/material": "^5.13.3",
+    "@mui/system": "^5.13.2",
     "@stitches/react": "^1.2.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -26,6 +32,7 @@
     "dompurify": "^3.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "formik": "^2.4.1",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
@@ -39,7 +46,10 @@
     "simplebar-react": "^3.2.4",
     "sse": "^0.0.8",
     "sse.js": "^0.6.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0",
+    "@react-buddy/ide-toolbox": "^2.3.1",
+    "@react-buddy/palette-mui": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
