--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@mui/lab": "^5.0.0-alpha.132",
     "@mui/material": "^5.13.3",
     "@mui/system": "^5.13.2",
+    "@react-buddy/ide-toolbox": "^2.3.1",
+    "@react-buddy/palette-mui": "^5.0.1",
     "@stitches/react": "^1.2.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -37,6 +39,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "prettier": "^2.8.8",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
     "react-bootstrap": "^2.7.4",
@@ -47,9 +50,7 @@
     "sse": "^0.0.8",
     "sse.js": "^0.6.1",
     "web-vitals": "^2.1.4",
-    "yup": "^1.2.0",
-    "@react-buddy/ide-toolbox": "^2.3.1",
-    "@react-buddy/palette-mui": "^5.0.1"
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
