--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-ace": "^10.1.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-iframe": "^1.8.5",
     "react-scripts": "5.0.1",
     "simplebar-react": "^3.2.4",
