changed backend, miscellaneous updates to frontend as well

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/codemirror-theme-gruvbox-dark": "^4.21.7",
     "@uiw/codemirror-theme-vscode": "^4.20.2",
     "@uiw/react-codemirror": "^4.20.2",
     "aws-sdk": "^2.1386.0",
@@ -31,6 +32,7 @@
     "body-parser": "^1.20.2",
     "bootstrap": "^3.4.1",
     "cors": "^2.8.5",
+    "dockerode": "^3.3.5",
     "dompurify": "^3.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -48,6 +50,8 @@
     "react-iframe": "^1.8.5",
     "react-scripts": "5.0.1",
     "simplebar-react": "^3.2.4",
+    "socket.io": "^4.7.1",
+    "socket.io-client": "^4.7.1",
     "sse": "^0.0.8",
     "sse.js": "^0.6.1",
     "web-vitals": "^2.1.4",
