indentation markers, docker-compose

--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,2 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.env
-/backend/.env
-/backend/go.mod
-/backend/go.sum
-/backend/main
-/backend/main.go
-/src/dev
-dev/
-/src/reportWebVitals.js
-/src/setupTests.js
-/src/logo.svg
-/src/App.test.js
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+node_modules
+rollup.config.js
