--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.379.1",
     "@codemirror/basic-setup": "^0.20.0",
     "@codemirror/commands": "^6.2.4",
     "@codemirror/lang-html": "^6.4.3",
@@ -14,6 +15,7 @@
     "@codemirror/view": "^6.12.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@lezer/highlight": "^1.1.6",
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.132",
     "@mui/material": "^5.13.3",
@@ -24,13 +26,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@uiw/codemirror-theme-gruvbox-dark": "^4.21.7",
-    "@uiw/codemirror-theme-vscode": "^4.20.2",
-    "@uiw/react-codemirror": "^4.20.2",
     "aws-sdk": "^2.1386.0",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "bootstrap": "^3.4.1",
+    "codemirror": "^6.0.1",
     "cors": "^2.8.5",
     "dockerode": "^3.3.5",
     "dompurify": "^3.0.3",
